finished state, creating containers

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,6 +10,7 @@ wheel = "*"
 mongoengine = "*"
 kombu = "*"
 celery = {extras = ["librabbitmq"], version = "*"}
+python-dotenv = "*"
 
 [dev-packages]
 autopep8 = "*"
