--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ services:
   mongo:
     image: mongo
     restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+    env_file:
+      - .env
     ports:
       - 27017:27017
+    volumes:
+      - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
 
   mongo-express:
     image: mongo-express
@@ -18,7 +19,7 @@ services:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
 
   rabbitmq:
     container_name: rabbitmq
@@ -30,6 +31,16 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+
+  api:
+    build: ./Dockerfile
+    ports:
+      - 5000:5000
+    env_file:
+      - .env
+    # volumes:
+    #   - .api:/usr/local/src/app
+    command: sh -c "flask run -h 0.0.0.0"
 
 
   # elasticsearch:
