--- a/stock_bot/Pipfile
+++ b/stock_bot/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 requests = "*"
 celery = {extras = ["librabbitmq"], version = "*"}
 kombu = "*"
+python-dotenv = "*"
 
 [dev-packages]
 autopep8 = "*"
